FIxed the annoying gap between the links

--- a/styles/navBar.css
+++ b/styles/navBar.css
@@ -22,6 +22,7 @@
 }
 
 .navigation ul li {
+    flex-grow: 2;
     padding: 3% 11%;
 }
 
